# gary-terminal

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json
.github/workflows/: ci.yml
examples/: config.toml  theme.toml
gary_terminal/: __init__.py  __main__.py  config.py
gary_terminal/engine/: __init__.py  agent.py  backend.py  context.py  events.py  lsp.py  mcp_client.py  ollama_client.py  rag.py  session.py  tools.py  usage.py
gary_terminal/tui/: __init__.py  app.py  completion.py  styles.tcss  theme.py
scripts/: smoke_engine.py  test-agents-status.ts  test-codex-detect.ts  test-filesearch.ts  test-input.ts  test-interrupt.ts  test-keymap.ts  test-lifecycle.ts  test-monitoring.ts  test-procmon.ts  test-session-store.ts  test-session.ts  test-slash.ts  test-subagent.ts  test-sysstats.ts  test-usage-split.ts
src/: App.tsx  index.tsx  keymap.ts  store.ts  types.ts
src/claude/: permissionServer.ts  session.ts  sessionManager.ts
src/components/: BindDialog.tsx  CheatSheet.tsx  ConversationPane.tsx  InputPane.tsx  MainColumn.tsx  NewSessionDialog.tsx  PermissionDialog.tsx  ResumeDialog.tsx  TitleBar.tsx  WaitingBanner.tsx  inputUtils.ts
src/data/: agentsStatus.ts  claudeUsage.ts  codexUsage.ts  fileSearch.ts  mcp.ts  sessionStore.ts  skills.ts  slashCommands.ts  (+1 more)
tests/: test_agent_features.py  test_agent_loop.py  test_completion.py  test_config.py  test_context.py  test_lsp.py  test_rag.py  test_session.py  test_theme.py  test_theme_app.py  test_tools.py  test_tools_extra.py  test_ui_extra.py  test_usage.py
(+12 files in other folders)
