[project]
name = "gary-terminal"
version = "0.1.0"
description = "로컬 코딩 에이전트 TUI — Python 엔진 + Textual + Ollama"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
]

[project.scripts]
gt = "gary_terminal.__main__:main"

[project.optional-dependencies]
dev = [
    "textual-dev>=1.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gary_terminal"]
